--- a/package.json
+++ b/package.json
@@ -4,31 +4,26 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",   
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.13",
     "next": "14.0.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.21.1",
-    "styled-components": "^6.1.6",
-    "watch": "^1.0.2"
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.0.0",
     "eslint-config-next": "14.0.1",
-    "postcss": "^8",
+    "postcss": "^8.0.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.0.2"
   }
 }
