--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.11.0",
-    "sharp": "^0.34.4"
+    "sharp": "0.33.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
